@@ -149,7 +149,7 @@ def _init_nodes(builder, env, overrides, tlist, slist):
     for t in tlist:
         if t.side_effect:
             raise UserError, "Multiple ways to build the same target were specified for: %s" % str(t)
-        if t.builder is not None:
+        if t.has_builder():
             if t.env != env:
                 raise UserError, "Two different environments were specified for the same target: %s"%str(t)
             elif t.overrides != overrides:
