@@ -116,6 +116,8 @@ class BuilderTestCase(unittest.TestCase):
                 return self.name
             def builder_set(self, builder):
                 self.builder = builder
+            def has_builder(self):
+                return not self.builder is None
             def env_set(self, env, safe=0):
                 self.env = env
             def add_source(self, source):
